--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,14 @@
 theme: jekyll-theme-cayman
+# Site settings
+title: Melroy's Blog
+email: meldsza@gmail.com
+description: > # this means to ignore newlines until "baseurl:"
+  Hi, I am Melroy Neil Dsouza, an aspiring to-be developer. Here i talk about my experiences with the most commonly used frameworks in the world
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "https://meldsza.github.io/" # the base hostname & protocol for your site
+github_username:  meldsza
+
+# Build settings
+markdown: kramdown
+# Google Site Analytics
 google_analytics: UA-99588187-1
