--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,8 @@
-theme: lanyon
+# Permalinks
+#
+# Use of `relative_permalinks` ensures post links from the index work properly.
+permalink:           pretty
+relative_permalinks: true
 # Site settings
 title: Melroy's Blog
 email: meldsza@gmail.com
