--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,14 @@
+
+# Dependencies
+markdown:         redcarpet
+pygments:         true
+
 # Permalinks
-#
-# Use of `relative_permalinks` ensures post links from the index work properly.
-permalink:           pretty
-relative_permalinks: true
+permalink:        pretty
+paginate:         5
+
+# Custom vars
+version:          1.0.0
 # Site settings
 title: Melroy's Blog
 email: meldsza@gmail.com
